Only clear pixels inside a paint device

On clearing pixels, only clear the pixels that actually have content, so
use the paint device's default bounds object to get the intersection
between the selection and the paint device.

BUG: 293987